/*
 * Copyright (c) 2026 Alwin Ibba
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
apply plugin: 'com.android.application'

android {
    compileSdkVersion 37
    defaultConfig {
        applicationId "net.ibbaa.keepitup"
        minSdkVersion 23
        //noinspection EditedTargetSdkVersion,OldTargetApi,ExpiredTargetSdkVersion
        targetSdkVersion 36
        versionCode 24
        versionName "1.13.0"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_21
        targetCompatibility JavaVersion.VERSION_21
    }
    buildFeatures {
        buildConfig = true
    }
    buildTypes {
        release {
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    lint {
        lintConfig = file("lint.xml")
        disable 'ExpiredTargetSdkVersion'
    }
    namespace 'net.ibbaa.keepitup'
}

def javaAssetsDir = layout.buildDirectory.dir("generated/java-assets")

android {
    sourceSets {
        androidTest {
            assets.srcDirs += [javaAssetsDir]
        }
    }
}

tasks.register('copyJavaSourceAssets', Sync) {
    from('src/main/java')
    from('src/androidTest/java') {
        into 'androidTestSrc'
    }
    into(javaAssetsDir)
}

preBuild.dependsOn 'copyJavaSourceAssets'

androidComponents {
    onVariants(selector().all()) { variant ->
        variant.outputs.forEach { output ->
            output.outputFileName.set("keepitup-${variant.buildType}.apk")
        }
    }
}

configurations.configureEach {
    resolutionStrategy.capabilitiesResolution.withCapability("com.google.guava:listenablefuture") {
        select("com.google.guava:guava:0")
    }
}

dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation(platform('org.jetbrains.kotlin:kotlin-bom:2.4.0'))
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
    implementation 'androidx.tracing:tracing:1.3.0'
    implementation 'androidx.recyclerview:recyclerview:1.4.0'
    implementation 'androidx.annotation:annotation:1.10.0'
    implementation 'androidx.preference:preference:1.2.1'
    implementation 'androidx.core:core-ktx:1.19.0'
    implementation 'androidx.core:core:1.19.0'
    implementation 'androidx.documentfile:documentfile:1.1.0'
    implementation 'com.google.android.material:material:1.14.0'
    implementation 'com.google.guava:guava:33.6.0-android'
    implementation 'com.google.crypto.tink:tink-android:1.23.0'
    implementation 'net.ibbaa.phonelog:phonelog:2.1.2'
    implementation 'com.squareup.okhttp3:okhttp:5.4.0'
    implementation 'org.bouncycastle:bcprov-lts8on:2.73.11'
    implementation 'org.snmp4j:snmp4j:3.12.2'
    testImplementation 'androidx.annotation:annotation:1.10.0'
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.mockito:mockito-core:5.23.0'
    testImplementation 'org.powermock:powermock-api-mockito2:2.0.9'
    testImplementation 'org.powermock:powermock-module-junit4:2.0.9'
    testImplementation 'org.powermock:powermock-core:2.0.9'
    androidTestImplementation 'androidx.test:core:1.7.0'
    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
    androidTestImplementation 'androidx.test:runner:1.7.0'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
    androidTestImplementation 'androidx.test:rules:1.7.0'
}
